rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_constant_folding.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 0
move r1 15
move r1 4111

## Optimized Output

move r1 4111
