rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_operations.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r3 5
move r2 3
and r1 r3 r2
or r1 r3 r2
xor r1 r3 r2
not r1 r3

## Optimized Output

move r3 5
move r2 3
not r1 r3
