rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_shifts.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r2 8
sll r1 r2 2
move r1 r1
sra r1 r2 1
move r1 r1
srl r1 r2 1
move r1 r1

## Optimized Output

move r2 8
move r1 4
