rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_with_variables.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
expression: output
---
## Unoptimized Output

j main
pack_bits:
pop r8
pop r9
push sp
push ra
sll r1 r9 8
or r1 r1 r8
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
extract_bits:
pop r8
push sp
push ra
sra r1 r8 8
and r2 r1 255
and r1 r8 255
push r2
push r1
sub r0 sp 4
get r0 db r0
move r15 r0
j __internal_L2
__internal_L2:
sub r0 sp 3
get ra db r0
j ra
main:

## Optimized Output

j 23
pop r8
pop r9
push sp
push ra
sll r1 r9 8
or r15 r1 r8
pop ra
pop sp
j ra
pop r8
push sp
push ra
sra r1 r8 8
and r2 r1 255
and r1 r8 255
push r2
push r1
sub r0 sp 4
get r15 db r0
sub r0 sp 3
get ra db r0
j ra
