rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__complex_bit_manipulation.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
expression: output
---
## Unoptimized Output

j main
encode_flags:
pop r8
pop r9
pop r10
push sp
push ra
sll r2 r10 7
sll r1 r9 4
or r1 r2 r1
or r1 r1 r8
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
decode_flags:
pop r8
push sp
push ra
sra r1 r8 7
and r3 r1 1
sra r1 r8 4
and r2 r1 7
and r1 r8 15
push r3
push r2
push r1
sub r0 sp 5
get r0 db r0
move r15 r0
j __internal_L2
__internal_L2:
sub r0 sp 4
get ra db r0
j ra
main:

## Optimized Output

j 25
pop r8
pop r9
pop r10
sll r2 r10 7
sll r1 r9 4
or r1 r2 r1
or r15 r1 r8
j ra
pop r8
push sp
push ra
sra r1 r8 7
and r3 r1 1
sra r1 r8 4
and r2 r1 7
and r1 r8 15
push r3
push r2
push r1
sub r0 sp 5
get r15 db r0
sub r0 sp 4
get ra db r0
j ra
